# minijavacc

./: .gitignore  .gitmodules  .travis.yml  AST_specification.txt  CMakeLists.txt  Doxyfile  Grammatik.docx  README.md  build  build.sh  build_and_test  build_debug  build_hs.sh  minijavacc.workspace  run  run.sh  run_backend_tests  run_compiler_tests  run_hs.sh  run_semantic_tests  travis
compilertester/: CompilerTester.java
experiments/markus/libfirmexp/libfirmexp/: main.cpp
hs/: Lexer.hs  Main.hs  Parser.hs  ParserTests.hs
meta/presentation/: outline.key  presentation.tex
meta/presentation/figures/: compiler-outline.eps  compiler-outline.ipe
meta/presentation/templates/: beamerthemekit.sty  beamerthemekitwide.sty
runtime/: println.c  runtime.c
specs/: AST_specification.txt  Namensanalyse.txt  grammar.txt  grammar_stars.txt
src/: CMakeLists.txt
src/backend/: amd64instructions.cpp  amd64instructions.h  assemblercontext.cpp  assemblercontext.h  backend.cpp  backend.h  graphassembler.cpp  graphassembler.h  registerallocator.cpp  registerallocator.h  values.cpp  values.h
src/compiler/: compiler.cpp  compiler.h  compiler.hpp
src/graphcreator/: creator.cpp  creator.h  expressioncreator.cpp  expressioncreator.cpp.orig  expressioncreator.h  graphcreator.cpp  graphcreator.h  irbuilder.cpp  irbuilder.cpp.orig  irbuilder.h  irbuilder.h.orig  irinitializer.cpp  irinitializer.h  methodcreator.cpp  methodcreator.h  typecreator.cpp  typecreator.h
src/lexer/: keywords.txt  lexer.cpp  lexer.h  token.cpp  token.h
src/lexer/tests/: Test1-out.txt  Test2-out.txt  Test3.java  Test4-out.txt  Test5-out.txt  Test5.java  keywords_upper.txt  single_test_cases.sh  test1_out.txt  test3_out.txt  test4_out.txt  tests.sh  tokenizer  tokenizer.hs
src/main/: inputparser.cpp  inputparser.h  inputparser.hpp  main.cpp
src/optimizer/: arithmeticoptimization.cpp  arithmeticoptimization.h  constantpropagation.cpp  constantpropagation.h  optimizer.cpp  optimizer.h
src/parser/: ast.cpp  ast.h  ast.h.orig  node.cpp  node.h  parser.cpp  parser.h  prettyprinter.cpp  prettyprinter.h
src/semantics/: astmodifier.cpp  astmodifier.h  checker.cpp  checker.h  generalchecker.cpp  generalchecker.h  mainmethodchecker.cpp  mainmethodchecker.h  methodfieldcollector.cpp  methodfieldcollector.h  returnchecker.cpp  returnchecker.h  semantictype.cpp  semantictype.h  singleton.h  staticdeclarationscollector.cpp  staticdeclarationscollector.cpp.orig  staticdeclarationscollector.h  staticresolver.cpp  staticresolver.h  sysoutprintchecker.cpp  sysoutprintchecker.h  typechecker.cpp  typechecker.h  types.cpp  types.h  voidtypechecker.cpp  voidtypechecker.h
src/stringtable/: stringable.cpp  stringtable.cpp  stringtable.h
src/structures/: ast.cpp  ast.h  stringtable.cpp  stringtable.h  token.cpp  token.h  types.cpp  types.h
src/symboltable/: symboltable.cpp  symboltable.h
src/tests/: delivervalue-tests.cpp  delivervalue-tests.h
tests/lexer/: edge_cases_in.txt  edge_cases_out.txt  errors_err.txt  single_test_cases.sh  test1_in.txt  test2_in.txt  test2_out.txt  test4_in.txt  test5_out.txt  tests.sh  tokenizer  while_out.txt
tests/unittests/: CallFromNewObject.java  FieldAccess.java  IfReturn.java  Ifs.java  Logical.java  LongBoolExpressions.java  NullIsNull.java  ReadOneChar.java  Simple.java  Sout.java  TwoLoops.java  simple_add.java
tools/yComp-1.3.19/: ycomp.cmd
unittests/: ArrayOfObjects.java  Arrays.java  Calls.java  CyclicPhi.java  DivModMul.java  MutliObjectInstances.java  PhiCyclic.java  Returning.java  Simple.java  Unreachable.java  While.java  divtest.java  simple_add.java  simple_sub.java
